Fixed Navbar collapse for index.html and dashboard.html

--- a/www/less/dashboard.less
+++ b/www/less/dashboard.less
@@ -22,15 +22,15 @@
 
 //Styles
 
-body {
-	margin-top: 10px;
-	overflow-x: hidden;
-	// background-color: #222;
-}
-
 @media(min-width:768px) {
 	body {
 		margin-top: 50px;
+	}
+}
+
+@media(max-width:766px) {
+	body {
+		margin-top: 110px;
 	}
 }
 
@@ -174,4 +174,8 @@ body {
 			font-size: 1.3em;
 		}
 	}
+}
+
+.indent {
+	text-indent: 20px;
 }
